# catlogs

./: .gitignore  README.md
src/: catlogs.py  pyproject.toml  setup.py
src/catlog/: __main__.py  app.py
src/catlogs/: __init__.py  __main__.py  app.py
src/test/: test_catlog.py
